更新文档，为接口添加鉴权
